--- a/app/src/main/res/layout-land/myscreen.xml
+++ b/app/src/main/res/layout-land/myscreen.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2" />
+        android:text="New Button" />
 
     <Button
+        android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button4" />
+        android:text="New Button" />
 
     <Button
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button3" />
+        android:text="New Button" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Горизонтальная хта"
-        android:id="@+id/textView3" />
+        android:text="Горизонтальная хта" />
 
     <Button
+        android:id="@+id/button5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="New Button"
-        android:id="@+id/button5" />
+        android:text="New Button" />
 </LinearLayout>
