--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,19 +5,26 @@
     tools:context=".MainActivity">
 
     <item
+        android:icon="@drawable/sett"
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
     <item
-        android:id="@+id/action_item1"
+        android:id="@+id/action_item3"
         android:orderInCategory="100"
-        android:title="@string/action_item1"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_item2"
-        android:orderInCategory="100"
-        android:title="@string/action_item2"
-        app:showAsAction="never" />
-
+        android:title="@string/action_menu_stable"
+        app:showAsAction="collapseActionView" />
+    <group android:id="@+id/action_group1">
+        <item
+            android:id="@+id/action_item1"
+            android:orderInCategory="100"
+            android:title="@string/action_item1"
+            app:showAsAction="collapseActionView" />
+        <item
+            android:id="@+id/action_item2"
+            android:orderInCategory="100"
+            android:title="@string/action_item2"
+            app:showAsAction="collapseActionView" />
+    </group>
 </menu>
