--- a/app/src/main/res/layout/myscreen.xml
+++ b/app/src/main/res/layout/myscreen.xml
@@ -39,7 +39,6 @@
             android:layout_gravity="right"
             android:checked="false"
             android:text="@string/right" />
-
     </RadioGroup>
 
     <LinearLayout
@@ -66,21 +65,28 @@
             android:id="@+id/editText1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
+            android:layout_weight="0"
             android:inputType="text"
             android:text="@string/enter_name" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="45"
+            android:layout_weight="50"
             android:text="@string/add" />
         <Button
             android:id="@+id/button_clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="45"
+            android:layout_weight="50"
             android:text="@string/clear" />
     </LinearLayout>
 
