--- a/app/src/main/res/layout/myscreen.xml
+++ b/app/src/main/res/layout/myscreen.xml
@@ -21,7 +21,7 @@
             android:id="@+id/radioButton1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="true"
             android:text="@string/left" />
 
         <RadioButton
@@ -75,6 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
 
         <Button
             android:id="@+id/button_add"
